tests/agl/rejections/type/duplicate_pattern_field.agl
enum R
  | Fail(issues: list[text])
  | Pass
let r: R = Pass
case r of
  | Fail(issues: a, issues: b) => ()
  | Pass => ()
